--- a/test/data/tapy/tapy.0.6.yaml
+++ b/test/data/tapy/tapy.0.6.yaml
@@ -1,7 +1,7 @@
 info:
   title: tapy Dokumentation
   description: "Alle X Sekunden wird jeder Endpunkt vom Cadu-Server angefragt. Bei einer Antwort des tapy-Servers mit nextRequest=true enthält die nächste Anfrage des Cadu-Servers die angeforderten Daten"
-  version: '0.6'
+  version: "0.6"
 # servers:
 #   - url: https://mock-server
 tags:
@@ -15,8 +15,7 @@ tags:
     description: Bezahlen einzelner Bestellungen
   - name: invoices
     description: Rechnungsbezogene Daten
-  
-    
+
 paths:
   /tables/get:
     post:
@@ -32,20 +31,20 @@ paths:
               type: object
               properties:
                 ackBody:
-                  $ref: '#/components/schemas/ackObj'
+                  $ref: "#/components/schemas/ackObj"
                 requestBody:
-                  $ref: '#/components/schemas/allTables'
-                
+                  $ref: "#/components/schemas/allTables"
+
             example:
-              ackBody: 
+              ackBody:
                 requestId: "AF155F"
                 responseCode: 200
                 responseMsg: "OK"
               requestBody:
                 tables:
-                  - tableId: '2421242'
+                  - tableId: "2421242"
                     items:
-                      - orderId: '626307377'
+                      - orderId: "626307377"
                         orderUnixTimestamp: 1666533212
                         itemId: 26909720
                         # quantity: 1
@@ -55,29 +54,29 @@ paths:
                         orderComment: Ohne Zitrone
                         isFood: false
                         isLocked: false
-                      - orderId: '626307399'
+                      - orderId: "626307399"
                         orderUnixTimestamp: 1666523212
                         itemId: 26902720
                         quantity: 1
                         priceItem: 1790
                         priceTotal: 1790
                         itemName: Rinderhüftsteak
-                        orderComment: ''
+                        orderComment: ""
                         isFood: true
                         isLocked: false
-                  - tableId: '2421243'
+                  - tableId: "2421243"
                     items:
-                      - orderId: '626317399'
+                      - orderId: "626317399"
                         orderUnixTimestamp: 1666333200
                         itemId: 26909719
                         # quantity: 1
                         priceItem: 1290
                         priceTotal: 1290
                         itemName: Penne "Two Broke Girls"
-                        orderComment: ''
+                        orderComment: ""
                         isFood: true
                         isLocked: false
-                      - orderId: '626307123'
+                      - orderId: "626307123"
                         orderUnixTimestamp: 1666323200
                         itemId: 26909721
                         quantity: 1
@@ -88,20 +87,19 @@ paths:
                         isFood: false
                         isLocked: false
       responses:
-        '200':
+        "200":
           description: >-
             Gibt an ob bei der nächsten Anfrage die Daten des POS geschickt
             werden sollen. Keine optinale nextRequestParams.
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/nextRequestObj'
-              example: 
+                $ref: "#/components/schemas/nextRequestObj"
+              example:
                 nextRequest: true
                 nextRequestId: "AF155F"
                 nextRequestParams: {}
-          
-          
+
   /table/get:
     post:
       tags:
@@ -116,18 +114,18 @@ paths:
               type: object
               properties:
                 ackBody:
-                  $ref: '#/components/schemas/ackObj'
+                  $ref: "#/components/schemas/ackObj"
                 requestBody:
-                  $ref: '#/components/schemas/tableState'
-            example: 
-              ackBody: 
+                  $ref: "#/components/schemas/tableState"
+            example:
+              ackBody:
                 requestId: "AF1601"
                 responseCode: 200
                 responseMsg: "OK"
               requestBody:
-                tableId: '2421242'
+                tableId: "2421242"
                 items:
-                  - orderId: '626307377'
+                  - orderId: "626307377"
                     orderUnixTimestamp: 1666533212
                     itemId: 26909720
                     quantity: 1
@@ -137,18 +135,18 @@ paths:
                     orderComment: Ohne Zitrone
                     isFood: false
                     isLocked: false
-                  - orderId: '626307399'
+                  - orderId: "626307399"
                     orderUnixTimestamp: 1666523212
                     itemId: 26902720
                     quantity: 1
                     priceItem: 1790
                     priceTotal: 1790
                     itemName: Rinderhüftsteak
-                    orderComment: ''
+                    orderComment: ""
                     isFood: true
                     isLocked: false
       responses:
-        '200':
+        "200":
           description: >-
             Gibt an ob bei der nächsten Anfrage die Daten des POS geschickt
             werden sollen. Enthält als nextRequestParams eine Tisch ID zu welchem die
@@ -156,12 +154,11 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/nextRequestObj'
-              example: 
+                $ref: "#/components/schemas/nextRequestObj"
+              example:
                 nextRequest: true
                 nextRequestId: "AF1601"
-                nextRequestParams: { tableID: '2421242'}
-
+                nextRequestParams: { tableID: "2421242" }
 
   /locked/post:
     post:
@@ -172,27 +169,25 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/ackObj'
+              $ref: "#/components/schemas/ackObj"
       responses:
-        '200':
+        "200":
           description: Übermittelt welche bonierte Bestellungen ent-/gesperrt werden sollen
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/nextRequestObjLocked'
-                        
-                        
-              example: 
+                $ref: "#/components/schemas/nextRequestObjLocked"
+
+              example:
                 nextRequest: true
                 nextRequestId: "AF1602"
                 nextRequestParams:
-                  tableId: '2421242'
+                  tableId: "2421242"
                   toLocked: true
                   orders:
-                    - '626307399'
-                    - '626307377'
-                            
-                            
+                    - "626307399"
+                    - "626307377"
+
   /payment/post:
     post:
       tags:
@@ -202,40 +197,40 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/ackObj'
+              $ref: "#/components/schemas/ackObj"
       responses:
-        '200':
+        "200":
           description: Übermittelt welche bonierte Bestellungen bezahlt wurde
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/nextRequestObjPayment'
-              examples: 
+                $ref: "#/components/schemas/nextRequestObjPayment"
+              examples:
                 hospitalityReceiptFalse:
                   value:
                     nextRequest: true
                     nextRequestId: "AF1603"
                     nextRequestParams:
                       invoiceId: "XX1603"
-                      tableId: '2421242'
+                      tableId: "2421242"
                       orders:
-                        - '626307399'
-                        - '626307377'
+                        - "626307399"
+                        - "626307377"
                       hospitalityReceipt: false
                       priceTotal: 2580
                       tip: 300
                       paymentMethod: applePay
-                
+
                 hospitalityReceiptTrue:
                   value:
                     nextRequest: true
                     nextRequestId: "AF1603"
                     nextRequestParams:
                       invoiceId: "XX1603"
-                      tableId: '2421242'
+                      tableId: "2421242"
                       orders:
-                        - '626307399'
-                        - '626307377'
+                        - "626307399"
+                        - "626307377"
                       hospitalityReceipt: true
                       hospitalityInfo:
                         comapnyName: "Burgers and More"
@@ -243,16 +238,14 @@ paths:
                         companyZip: 80797
                         occasion: "Kundenakquise"
                         attendees:
-                          - {"Thilo Reintjes": "Entwickler"}
-                          - {"Eric Bergmann": "Sales"}
+                          - { "Thilo Reintjes": "Entwickler" }
+                          - { "Eric Bergmann": "Sales" }
                         signature: signature-XX1603.jpg
-                        
+
                       priceTotal: 2580
                       tip: 300
                       paymentMethod: applePay
-                
-  
-  
+
   /invoices/get:
     post:
       tags:
@@ -266,7 +259,7 @@ paths:
               type: object
               properties:
                 ackBody:
-                  $ref: '#/components/schemas/ackObj'
+                  $ref: "#/components/schemas/ackObj"
                 requestBody:
                   type: object
                   properties:
@@ -282,7 +275,7 @@ paths:
             examples:
               hospitalityReceiptFalse:
                 value:
-                  ackBody: 
+                  ackBody:
                     requestId: "AF1604"
                     responseCode: 200
                     responseMsg: "OK"
@@ -292,7 +285,7 @@ paths:
                     url: "invoices.cadu.de/XX1603"
               hospitalityReceiptTrue:
                 value:
-                  ackBody: 
+                  ackBody:
                     requestId: "AF1604"
                     responseCode: 200
                     responseMsg: "OK"
@@ -300,23 +293,19 @@ paths:
                     invoiceId: "XX1603"
                     hospitalityReceipt: true
                     url: "invoices.cadu.de/XX1603"
-                
-                
+
       responses:
-        '200':
+        "200":
           description: >-
             Gibt an ob bei der nächsten Anfrage die eine Rechnung weitergeleitet werden soll. Enthält als Parameter eine invoiceId zur Anfrage, welche Rechnung geschickt werden soll
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/nextRequestObj'
+                $ref: "#/components/schemas/nextRequestObj"
               example:
                 nextRequest: true
                 nextRequestId: "AF1604"
-                nextRequestParams: { invoiceId: 'XX1603'}
-                
-
-
+                nextRequestParams: { invoiceId: "XX1603" }
 
 components:
   schemas:
@@ -453,7 +442,7 @@ components:
         items:
           type: array
           items:
-            $ref: '#/components/schemas/item'
+            $ref: "#/components/schemas/item"
           description: Liste an auf dem Tisch aktuell bonierte Bestellungen
       description: Aktueller ist-Zustand des Tisches
     allTables:
@@ -462,9 +451,9 @@ components:
         tables:
           type: array
           items:
-            $ref: '#/components/schemas/tableState'
+            $ref: "#/components/schemas/tableState"
           description: >-
             Liste an allen Tischen in der Gastro und deren zugehörigen
             Informationen´
-      description: ''
+      description: ""
 openapi: 3.0.0
