--- a/test/data/truckertools/scapi_capacity-by-load.2.0.yaml
+++ b/test/data/truckertools/scapi_capacity-by-load.2.0.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 
 info:
-  version: '2.0'
+  version: "2.0"
   title: SmartCapacity - Capacity by Load
   termsOfService: https://www.truckertools.com/terms
   contact:
@@ -10,44 +10,43 @@ info:
     name: Private
     url: https://smartcapacity.truckertools.com
   description: |
-    Get carrier capacity by load number. 
-    
+    Get carrier capacity by load number.
+
 servers:
-  - url: 'https://scapi.truckertools.com'
+  - url: "https://scapi.truckertools.com"
     description: |
       Production Server
-  - url: 'https://scapi-staging.truckertools.com'
+  - url: "https://scapi-staging.truckertools.com"
     description: |
       Staging Server
 
 security:
-  - bearerAuth: []    
-  
+  - bearerAuth: []
+
 paths:
-  '/api/brokers/carriers/carrierCapacityForLoad':
+  "/api/brokers/carriers/carrierCapacityForLoad":
     get:
       tags:
-      - Requests
+        - Requests
       summary: Carrier Capacity by Load
       description: |
         Get carrier capacity by load number.
       parameters:
-        - $ref: '#/components/parameters/LoadNumber'
+        - $ref: "#/components/parameters/LoadNumber"
       responses:
-        '200':
-          $ref: '#/components/responses/LoadCapacityResponse'
-        '401':
-          $ref: '#/components/responses/UnauthenticatedResponse'
+        "200":
+          $ref: "#/components/responses/LoadCapacityResponse"
+        "401":
+          $ref: "#/components/responses/UnauthenticatedResponse"
 
 components:
   securitySchemes:
     bearerAuth:
       type: http
       scheme: bearer
-      bearerFormat: JWT  
+      bearerFormat: JWT
 
   parameters:
-
     LoadNumber:
       description: |
         Load number
@@ -59,7 +58,6 @@ components:
         example: 9001
 
   responses:
-
     UnauthenticatedResponse:
       description: |
         Response indicating invalid authentication.
@@ -68,7 +66,7 @@ components:
           schema:
             type: object
             required:
-            - status
+              - status
             properties:
               status:
                 description: |
@@ -89,10 +87,9 @@ components:
           schema:
             type: array
             items:
-              $ref: '#/components/schemas/Carrier'
+              $ref: "#/components/schemas/Carrier"
 
   schemas:
-
     Carrier:
       type: object
       properties:
@@ -139,19 +136,19 @@ components:
         type:
           type: string
           enum:
-          - in network
-          - out of network
-          - my capacity
-          - dibs
+            - in network
+            - out of network
+            - my capacity
+            - dibs
           example: in network
         preferredDestinations:
           type: array
           items:
             type: string
             example:
-            - DC
-            - MD
-            - VA
+              - DC
+              - MD
+              - VA
         equipmentType:
           type: string
           example: Flatbed Hazardous
