--- a/test/data/truckertools/syncloads.3.0.yaml
+++ b/test/data/truckertools/syncloads.3.0.yaml
@@ -15,44 +15,43 @@ servers:
     description: Production Server
   - url: https://scapi-staging.truckertools.com
     description: Staging Server
-    
+
 security:
-  - bearerAuth: [] 
+  - bearerAuth: []
 
 paths:
-
-  '/api/postLoads':
+  "/api/postLoads":
     post:
       tags:
-       - Requests
+        - Requests
       summary: |
         Sync loads to Smart Capacity Digital Freight Matching platform
       description: |
         This API can be used to call a Web Service end point to Sync loads to Smart Capacity system.
       requestBody:
-        $ref: '#/components/requestBodies/PostLoadsRequest'
+        $ref: "#/components/requestBodies/PostLoadsRequest"
       responses:
-        '200':
-          $ref: '#/components/responses/PostLoadsSuccessResponse'
+        "200":
+          $ref: "#/components/responses/PostLoadsSuccessResponse"
 
 components:
   securitySchemes:
     bearerAuth:
       type: http
       scheme: bearer
-      bearerFormat: JWT  
+      bearerFormat: JWT
   requestBodies:
     PostLoadsRequest:
       description: |
         Request body.
       content:
-        'application/json':
+        "application/json":
           schema:
             type: object
             required:
-            - integrationId
-            - accountId
-            - loads
+              - integrationId
+              - accountId
+              - loads
             properties:
               integrationId:
                 type: string
@@ -69,28 +68,26 @@ components:
                 description: |
                   Array of loads that gets to be processed
                 items:
-                  $ref: '#/components/schemas/Load'
+                  $ref: "#/components/schemas/Load"
 
   responses:
-
     PostLoadsSuccessResponse:
       description: |
         Success response.
       content:
-        'application/json':
+        "application/json":
           schema:
             type: object
 
   schemas:
-
     Load:
       type: object
       required:
-      - externalId
-      - loadNumber
-      - status
-      - pickup
-      - delivery
+        - externalId
+        - loadNumber
+        - status
+        - pickup
+        - delivery
       properties:
         status:
           type: string
@@ -122,30 +119,30 @@ components:
           description: |
             Unique identifier of the load on partner system.
         pickup:
-          $ref: '#/components/schemas/LoadStop'
+          $ref: "#/components/schemas/LoadStop"
         delivery:
-          $ref: '#/components/schemas/LoadStop'
+          $ref: "#/components/schemas/LoadStop"
         loadType:
           type: string
           example: FL
           enum:
-          - FL
-          - LTL
-          description: 'Full Load (FL), LTL (Less than Truck Load)'
+            - FL
+            - LTL
+          description: "Full Load (FL), LTL (Less than Truck Load)"
         loadContact:
-          $ref: '#/components/schemas/Contact'
+          $ref: "#/components/schemas/Contact"
           #description: Direct contact for this load, this will overwrite broker contact when provided
         operationUser:
-          $ref: '#/components/schemas/OperationUser'
+          $ref: "#/components/schemas/OperationUser"
         salesPerson:
-          #description: Sales Contact of the load. 
-          $ref: '#/components/schemas/Contact'
+          #description: Sales Contact of the load.
+          $ref: "#/components/schemas/Contact"
         revenue:
-          $ref: '#/components/schemas/Revenue'
+          $ref: "#/components/schemas/Revenue"
         carrierPay:
-          $ref: '#/components/schemas/CarrierPay'
+          $ref: "#/components/schemas/CarrierPay"
         targetCarrierPay:
-          $ref: '#/components/schemas/TargetCarrierPay'
+          $ref: "#/components/schemas/TargetCarrierPay"
         trucksCount:
           type: integer
           example: 1
@@ -224,28 +221,28 @@ components:
         additionalStops:
           type: array
           items:
-            $ref: '#/components/schemas/LoadStop'
+            $ref: "#/components/schemas/LoadStop"
           description: |
             Address details of additional stops, if any.
         broker:
-          $ref: '#/components/schemas/Broker'
+          $ref: "#/components/schemas/Broker"
         shipperLoadNumber:
           type: string
           example: SHP123
           description: |
             Load identifier number for the shipper. This can be used to identify the load on third party tracking platforms.
         carrier:
-          $ref: '#/components/schemas/Carrier'
+          $ref: "#/components/schemas/Carrier"
         driver:
-          $ref: '#/components/schemas/Driver'
+          $ref: "#/components/schemas/Driver"
         dispatcher:
-          $ref: '#/components/schemas/Contact'
+          $ref: "#/components/schemas/Contact"
         shipper:
-          $ref: '#/components/schemas/Shipper'
+          $ref: "#/components/schemas/Shipper"
         minRate:
-          $ref: '#/components/schemas/Rate'
+          $ref: "#/components/schemas/Rate"
         maxRate:
-          $ref: '#/components/schemas/Rate'
+          $ref: "#/components/schemas/Rate"
         tractorNumber:
           type: string
           example: TN12345
@@ -281,7 +278,7 @@ components:
           type: number
           example: 2.75
           description: |
-            Rate offered per mile with fuel for the load. 
+            Rate offered per mile with fuel for the load.
         triggerTracking:
           type: boolean
           default: false
@@ -292,7 +289,7 @@ components:
           items:
             type: string
           example:
-          - Carrier must have van
+            - Carrier must have van
           description: |
             A list of services required for this load. Carrier requirements, truck type, etc.
         responsibilityCodes:
@@ -304,20 +301,20 @@ components:
         extras:
           type: array
           items:
-            $ref: '#/components/schemas/Extra'
+            $ref: "#/components/schemas/Extra"
 
     LoadStop:
       type: object
       required:
-      - city
-      - state
-      - postalCode
-      - sequence
-      - scheduledAtEarlyDateTime
+        - city
+        - state
+        - postalCode
+        - sequence
+        - scheduledAtEarlyDateTime
       properties:
         address:
           type: string
-          example:  150 Main Street
+          example: 150 Main Street
           description: |
             Street address of the stop.
         city:
@@ -369,7 +366,7 @@ components:
           type: string
           example: -77.348146
           description: |
-            Longitude that customer wants to display to the carrier instead of actual longitude.    
+            Longitude that customer wants to display to the carrier instead of actual longitude.
         timeZone:
           type: string
           example: EST
@@ -404,7 +401,7 @@ components:
         extras:
           type: array
           items:
-            $ref: '#/components/schemas/Extra'
+            $ref: "#/components/schemas/Extra"
 
     Broker:
       type: object
@@ -444,10 +441,10 @@ components:
       description: |
         Carrier details. Required for Covered loads.
       required:
-      - companyName
-      - mc
-      - contactPhone
-      - contactEmail
+        - companyName
+        - mc
+        - contactPhone
+        - contactEmail
       properties:
         companyName:
           type: string
@@ -494,7 +491,7 @@ components:
       properties:
         name:
           type: string
-          example: John Smith 
+          example: John Smith
           description: |
             Name of the driver.
         phone:
@@ -555,7 +552,7 @@ components:
     OperationUser:
       type: object
       description: |
-        Dispatcher of the load information. 
+        Dispatcher of the load information.
       properties:
         id:
           type: string
@@ -591,7 +588,7 @@ components:
     Rate:
       type: object
       required:
-      - total
+        - total
       properties:
         total:
           type: number
@@ -600,28 +597,28 @@ components:
         lineHaul:
           type: object
           required:
-          - type
-          - value
+            - type
+            - value
           properties:
             type:
               type: string
-              enum: 
-              - flat
-              - mile
+              enum:
+                - flat
+                - mile
             value:
               type: number
         fuelSurcharge:
           type: object
           required:
-          - type
-          - value          
+            - type
+            - value
           properties:
-            type: 
+            type:
               type: string
               enum:
-              - flat
-              - mile
-              - percent
+                - flat
+                - mile
+                - percent
             value:
               type: number
         accessorial:
@@ -632,7 +629,7 @@ components:
               name:
                 type: string
               value:
-                type: number        
+                type: number
 
     Revenue:
       type: object
@@ -675,7 +672,7 @@ components:
           example: 800
           description: |
             Total rate for carrier pay.
-  
+
     TargetCarrierPay:
       type: object
       description: |
@@ -695,8 +692,8 @@ components:
     Extra:
       type: object
       required:
-      - name
-      - value
+        - name
+        - value
       properties:
         name:
           type: string
